# weblate

./: .bettercodehub.yml  .copilot-instructions.md  .coveragerc  .dclintrc  .deepsource.toml  .drone.star  .drone.starlark  .drone.yml  .editorconfig  .eslintrc.yml  .gitattributes  .gitignore  .gitignore_runtime  .gitmodules  .imgbotconfig  .landscape.yaml  .lgtm.yml  .markdownlint.json  .markdownlint.yml  .pep8  .pep8speaks.yml  .pre-commit-config.yaml  .prettierrc  .pylintrc  .readthedocs.yml  .rumdl.toml  .scrutinizer.yml  .stickler.yml  .stylelintrc  .travis.yml  .weblate  .yamllint.yml  ACCESSIBILITY.md  AGENTS.md  BACKERS.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ChangeLog  DCO  Gemfile  (+64 more)
.clusterfuzzlite/: Dockerfile  Dockerfile.dockerignore  build.sh  compile.sh  project.yaml
.devcontainer/: devcontainer.json
.github/: .kodiak.toml  CODEOWNERS  FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  labels.yml  renovate.json  stale.yml
.github/ISSUE_TEMPLATE/: accessibility.yml  bug_report.md  (+6 more)
.reuse/: dep5
.s2i/: environment
.well-known/: funding-manifest-urls
accounts/: admin.py  auth.py  captcha.py  forms.py  i18n.py  models.py  pipeline.py  tests.py  urls.py  views.py
appliance/: boot  initial_data.json  post_build  weblate
ci/: README.rst  apt-install  constraint.txt  docker-compose-mariadb.yml  docker-compose-mysql.yml  docker-compose-postgresql-redis.yml  docker-compose-postgresql.yml  install  install-sauce  install-tesseract  lib  lib.sh  migrate-override.txt  migrate-testing  pip-install  prepare-database  print-versions  pylint-scrutinizer.rc  report-coverage  requirements-scrutinizer.txt  requirements-shippable.txt  requirements-travis.txt  run-checkmigrate  run-docs  run-lint  run-migrate  run-selenium  run-setup  run-test  run-wsgi  services-down  services-up  setup-env
client/: README.rst  package.json  webpack.config.js
dev-docker/: .env  Dockerfile  README.rst  docker-compose.yml  environment
docs/: .gitignore  Backup_Restore_Scripts_Explanation.md  Copy_Projects_From_Server.md  Makefile  about.rst  admin.rst  api.rst  changes.rst  conf.py  config.rst  contributing.rst  debugging.rst  faq.rst  formats.rst  index.rst  install.rst  internals.rst  latexindex.rst  legal.rst  license.rst  make.bat  management.rst  python.rst  quick.rst  redirects.txt  requirements.txt  schemas.rst  toc-admin.rst  toc-changes.rst  toc-contrib.rst  toc-devel.rst  toc-user.rst  todo.rst  usage.rst  vcs.rst  wlc.rst  workflows.rst
examples/: apache-path.conf  apache.conf  apache.gunicorn.conf  beat-settings.py  benchmark  celery  celery-weblate.conf  celery-weblate.service  check_czech.py  check_foo.py  compress-repos  django.wsgi  fix_foo.py  generate-secret-key  git-merge-gettext-po  hook-cleanup-android  hook-json_restore_hierarchy  hook-merge-pot-in-po  hook-replace-single-quotes  hook-sort-properties  hook-unwrap-po  hook-update-linguas  hook-update-resx  lighttpd.conf  migrate-south  mt_service.py  unwrap_po  weblate.nginx.conf  weblate.uwsgi.ini
ftsearch/: __init__.py  models.py  stemming.py  weights.py
fuzzing/: README.md  atheris_compat.py  bootstrap.py  findings_reporter.py  runner.py  sentry.py  sentry_reporter.py  targets.py  urls.py
graphics/: Makefile  svg2png.sh  twitter-header.xcf
html/: 404.html  500.html  about.html  base.html  check.html  check_project.html  check_subproject.html  checks.html  commit-changes.html  config.js  contact.html  dictionaries.html  dictionary.html  git-tools.html  index.html  language.html  languages.html  list-translations.html  other.html  profile.html  project.html  project_info.html  similar.html  subproject.html  subproject_info.html  title.html  translate.html  translation.html  translation_info.html
k8s/: deployment-demo.yml  deployment-prod.yml  deployment.yml  pvc.yml  svc.yml
lang/: admin.py  data.py  i18n.py  models.py  tests.py  views.py
locale/: django.pot  djangojs.pot
openshift/: credentials.sh  htaccess  install.sh  manage.py  openshiftlibs.py  secure_db.py  settings.sh  update.sh  virtualenv.py  wsgi.py  wsgi_install.py
openshift3/: README.md  ephemeral-sqlite.json  persistent-mysql.json  persistent-postgresql.json  persistent-sqlite.json  template.yml  testing-sqlite.json  weblate-persistent-sqlite.json
sbom/: sbom.json
scripts/: README_create_project.md  __init__.py  add-lang  apache.conf  backup_from_server.sh  codespell.txt  compact-changes.py  create-release  deploy.sh  extract-release-notes  extract-release-notes.py  filter-docs-po.py  filter-mypy.sh  generate-aws-languages  generate-cjk-regexp  generate-cjk-regexp.py  generate-language-data  generate-license-data  generate-license-data.py  generate-locales  generate-non-word-chars  generate-specialchars  generate-specialchars.py  generate-unicodechars.py  get-schemas-dir.py  git-merge-gettext-po  list-contributors  list-contributors.py  list-documentation-languages.py  list-translated-languages  list-translated-languages.py  locales-fixup  locales-fixup.py  locales-grep  normalize-dist-archives.py  openshift-celery-runner.py  optimize-svg  pack-test-data  prepare-release  rdt-projects  (+22 more)
trans/: __init__.py  admin.py  admin_views.py  api.py  appsettings.py  checks.py  context_processors.py  debug.py  decorators.py  feeds.py  fonts.py  formats.py  forms.py  managers.py  mixins.py  models.py  requirements.py  search.py  simplediff.py  util.py  validators.py  views.py  widgets.py
travis/: migrate-testing  requirements.txt
ttkit/: aresource.py
weblate/: __init__.py  admin.py  appsettings.py  asgi.py  bootstrap_forms.py  celery.py  debug.py  jenkins_cleanup.py  logger.py  middleware.py  models.py  openshiftlib.py  requirements.py  runner.py  settings.py  settings_dev.py  settings_docker.py  settings_example.py  settings_fuzz.py  settings_jenkins.py  settings_openshift.py  settings_test.py  settings_test_mysql.py  settings_test_nose.py  settings_test_postgresql.py  settings_test_shippable.py  settings_test_sqlite.py  sitemaps.py  test_openshift.py  urls.py  views.py  wsgi.py
(+4378 files in other folders)
